--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+   "name": "@scrypted/home-assistant",
    "scripts": {
       "prepublishOnly": "NODE_ENV=production scrypted-webpack",
       "prescrypted-vscode-launch": "scrypted-webpack",
@@ -9,15 +10,17 @@
       "scrypted-webpack": "scrypted-webpack"
    },
    "scrypted": {
-      "name": "TypeScript Light",
+      "name": "Home Assistant Bridge",
       "type": "Device",
       "interfaces": [
-         "OnOff"
+         "DeviceProvider",
+         "Settings"
       ]
    },
    "dependencies": {
       "@scrypted/sdk": "0.0.33",
-      "axios": "^0.19.0"
+      "axios": "^0.19.0",
+      "home-assistant-js-websocket": "^4.2.2"
    },
    "devDependencies": {}
 }
