--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
    "name": "@scrypted/home-assistant",
+   "version": "0.0.1",
    "scripts": {
       "prepublishOnly": "NODE_ENV=production scrypted-webpack",
       "prescrypted-vscode-launch": "scrypted-webpack",
